--- a/hello/pubspec.yaml
+++ b/hello/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^3.1.3
+  shared_preferences: ^0.5.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
