--- a/hello/pubspec.yaml
+++ b/hello/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     sdk: flutter
   fluttertoast: ^3.1.3
   shared_preferences: ^0.5.6
+  path_provider: ^1.6.1
+  http: ^0.12.0+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
