--- a/hello/pubspec.yaml
+++ b/hello/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   shared_preferences: ^0.5.6
   path_provider: ^1.6.1
   http: ^0.12.0+4
+  lamp: ^0.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +41,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/veriler/sinif.json
+    - assets/src/closeLamp.png
+    - assets/src/openLamp.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
