--- a/projec/pubspec.yaml
+++ b/projec/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  fluttertoast: ^7.1.1
+  #fluttertoast: ^7.1.1
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +49,7 @@ flutter:
   assets:
     - assets/images/icons.png
     - assets/images/loading.gif
+    - assets/data/cars.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
