--- a/doner_app/pubspec.yaml
+++ b/doner_app/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.8.1
+
   flutter_test:
     sdk: flutter
 
@@ -38,6 +40,10 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+flutter_icons:
+  image_path: "assets/icon.png" 
+  android: true
+  ios: true
 flutter:
 
   # The following line ensures that the Material Icons font is
