--- a/PokeDex/pubspec.yaml
+++ b/PokeDex/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tutorial
+name: PokeDex
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -21,15 +21,14 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  shared_preferences: ^0.5.12+4
-  path_provider: ^1.6.24
+  http: ^0.12.2
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +47,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/loading.gif
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
