--- a/tutorial/pubspec.yaml
+++ b/tutorial/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   shared_preferences: ^0.5.12+4
   path_provider: ^1.6.24
+  sqflite: ^1.3.2+1
   flutter:
     sdk: flutter
 
