--- a/Tasks_app_firebase/pubspec.yaml
+++ b/Tasks_app_firebase/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   cloud_firestore: ^0.16.0+1
   firebase_core: ^0.7.0
   intl: ^0.16.1
+  flutter_slidable: ^0.5.7
+  toast: ^0.1.5
   flutter:
     sdk: flutter
 
