--- a/sinau_app_ui/pubspec.yaml
+++ b/sinau_app_ui/pubspec.yaml
@@ -21,9 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_svg: ^0.19.3
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,10 +46,17 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/cardData.json
     - assets/images/main_bg.jpg
     - assets/images/all_bg.jpg
     - assets/images/logo.png
     - assets/images/name.png
+    - assets/images/avatar.png
+    - assets/images/icons/home.svg
+    - assets/images/icons/media.svg
+    - assets/images/icons/search.svg
+    - assets/images/icons/user.svg
+    - assets/images/icons/icon1.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
